--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
         </header>
         <main>
             <div class="legacy-container">
-                <a class="tool-card topCard1" href="../">
+                <a class="tool-card topCard1" href="./">
                     <img src="./site-assets/assets/logo/CitoHubIcon.png" alt="logo">
                     <div glot-model="">
                         <h3 class="text-\[1\.17em\]">
