--- a/404.html
+++ b/404.html
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="/changelog/">
+                            <a class="tool-card text-\[1\.17em\]" href="./changelog/">
                                 <h3>
                                     <div glot-model="changelog">changelog</div>
                                     <i class="fa-solid fa-chart-simple"></i>
@@ -180,7 +180,7 @@
                     </div>
                     <div class="card-column">
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="/under-development/">
+                            <a class="tool-card text-\[1\.17em\]" href="./under-development/">
                                 <h3 glot-model="Under+development">Under development</h3>
                             </a>
                             <div class="tool-body">
@@ -192,14 +192,14 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card" href="/whats-new/">
+                            <a class="tool-card" href="./whats-new/">
                                 <h3 class="text-\[1\.17em\]">
                                     <div glot-model="What's+new">What's new</div>
                                     <i class="fa-solid fa-bullhorn"></i>
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="card" href="/whats-new/" glot-model="The+website+program+has+been+updated.">
+                                <a class="card" href="./whats-new/" glot-model="The+website+program+has+been+updated.">
                                     <div class="card-content">The website program has been updated.</div>
                                 </a>
                             </div>
