--- a/under-development/index.html
+++ b/under-development/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="../site-assets/css/changelog.css" />
         <link rel="stylesheet" href="../site-assets/css/versions.css" />
         <!-- JS -->
-        <script src="/site-assets/js/languageChange.js"></script>
+        <script src="../site-assets/js/languageChange.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <!-- code font for google-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
             <div>
                 <div class="header-leftArea">
                     <div id="logoFxnxa" class="logo--Fxnxa header-site-logo-area">
-                        <a href="/" aria-label="citohub-icon">
+                        <a href="../" aria-label="citohub-icon">
                             <img id="citohub-icon" style="width: 50px; height: 50px;" src="../site-assets/assets/logo/CitoHubIcon.png" alt="logo">
                         </a>
                     </div>
