--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div>
                 <div class="header-leftArea">
                     <div id="logoFxnxa" class="logo--Fxnxa header-site-logo-area">
-                        <a href="/" aria-label="citohub-icon">
+                        <a href="./" aria-label="citohub-icon">
                             <img id="citohub-icon" style="width: 50px; height: 50px;" src="./site-assets/assets/logo/CitoHubIcon.png" alt="logo">
                         </a>
                     </div>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="mobileSearch--WI2Tv"></div>
                 <div class="LeftCen">
-                    <a href="/" aria-label="Discussions"><div class="LeftCenItem animeSreddtUpfadeIn"><i class="fa-solid fa-bell" style="font-size: 20px;"></i></div></a>
+                    <a href="./" aria-label="Discussions"><div class="LeftCenItem animeSreddtUpfadeIn"><i class="fa-solid fa-bell" style="font-size: 20px;"></i></div></a>
                     <div class="LeftCenItem animeSreddtUpfadeIn"><i id="languageChange" class="fa-solid fa-earth-asia" style="font-size: 20px;" onclick="languageChangeBtn()"></i></div>
                 </div>
                 <div class="languageListBox">
