--- a/under-development/index.html
+++ b/under-development/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="mobileSearch--WI2Tv"></div>
                 <div class="LeftCen">
-                    <a href="/" aria-label="Discussions"><div class="LeftCenItem animeSreddtUpfadeIn"><i class="fa-solid fa-bell" style="font-size: 20px;"></i></div></a>
+                    <a href="../" aria-label="Discussions"><div class="LeftCenItem animeSreddtUpfadeIn"><i class="fa-solid fa-bell" style="font-size: 20px;"></i></div></a>
                     <div class="LeftCenItem animeSreddtUpfadeIn"><i id="languageChange" class="fa-solid fa-earth-asia" style="font-size: 20px;" onclick="languageChangeBtn()"></i></div>
                 </div>
                 <div class="languageListBox">
