--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="./site-assets/assets/logo/CitoHubIcon.png">
         <title id="site-title">SpeingCodeEditor</title>
         <!-- .webmanifest-->
-        <link rel="manifest" href="./site-assets/manifest/app.webmanifest" />
+        <link rel="manifest" href="./site-assets/manifest/webmanifest.json" />
         <!-- CSS -->
         <link rel="stylesheet" href="./site-assets/css/header.css" />
         <link rel="stylesheet" href="./site-assets/css/styles.css" />
