--- a/whats-new/index.html
+++ b/whats-new/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- icon -->
-        <link rel="icon" type="image/x-icon" href="../site-assets/assets/logo/CitoHubIcon.png">
-        <title id="site-title">What's new - SpeingCodeEditor</title>
-        <!-- .webmanifest-->
+        <link rel="icon" type="image/x-icon" href="./site-assets/assets/logo/CitoHubIcon.png">
+        <title id="site-title">SpeingCodeEditor</title>
+        <meta name="description" content="A web app that makes it easy to write code.">
+        <!-- .webmanifest--> 
+        <meta name="theme-color" content="#1a1a1a"/>
         <link rel="manifest" href="./site-assets/manifest/webmanifest.json" />
         <!-- CSS -->
         <link rel="stylesheet" href="../site-assets/css/header.css" />
