--- a/404.html
+++ b/404.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- icon -->
         <link rel="icon" type="image/x-icon" href="./site-assets/assets/logo/CitoHubIcon.png">
-        <title id="site-title">404 - SpeingCodeEditor</title>
-        <!-- .webmanifest-->
+        <title id="site-title">SpeingCodeEditor</title>
+        <meta name="description" content="A web app that makes it easy to write code.">
+        <!-- .webmanifest--> 
+        <meta name="theme-color" content="#1a1a1a"/>
         <link rel="manifest" href="./site-assets/manifest/webmanifest.json" />
         <!-- CSS -->
         <link rel="stylesheet" href="./site-assets/css/header.css" />
@@ -93,13 +95,13 @@
                 <div class="card-group animeSreddtUpfadeIn">
                     <div class="card-column">
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]">
+                            <a class="tool-card text-\[1\.17em\]" href="#">
                                 <h3 glot-model="Popular+Tools">
                                     Popular Tools
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card">
+                                <a class="tool-card" href="#">
                                     <h3 class="text-\[1\.17em\]" style="color: var(--accent-danger);" glot-model="Data+does+not+exist.">
                                         Data does not exist.
                                     </h3>
@@ -137,7 +139,7 @@
                                             </div>
                                             <div class="badge" style="--tint: 50;">
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8.22 1.754a.25.25 0 00-.44 0L1.698 13.132a.25.25 0 00.22.368h12.164a.25.25 0 00.22-.368L8.22 1.754zm-1.763-.707c.659-1.234 2.427-1.234 3.086 0l6.082 11.378A1.75 1.75 0 0114.082 15H1.918a1.75 1.75 0 01-1.543-2.575L6.457 1.047zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-5.25a.75.75 0 00-1.5 0v2.5a.75.75 0 001.5 0v-2.5z"></path></svg>
-                                                <a glot-model="breaking">breaking</a>
+                                                <a href="#" glot-model="breaking">breaking</a>
                                             </div>
                                         </div>
                                         <div class="changelog-content">
@@ -155,7 +157,7 @@
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card">
+                                <a class="tool-card" href="#">
                                     <div>
                                         <h3 class="text-\[1\.17em\]">
                                             0.0.1
@@ -165,7 +167,7 @@
                                         </p>
                                     </div>
                                 </a>
-                                <a class="tool-card">
+                                <a class="tool-card" href="#">
                                     <div id="LatestReleaseBox">
                                         <h3 class="text-\[1\.17em\]">
                                             0.0.1
@@ -184,7 +186,7 @@
                                 <h3 glot-model="Under+development">Under development</h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card">
+                                <a class="tool-card" href="#">
                                     <h3 class="text-\[1\.17em\]" glot-model="Site+system">
                                         Site system
                                     </h3>
@@ -205,14 +207,14 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]">
+                            <a class="tool-card text-\[1\.17em\]" href="#">
                                 <h3>
                                     <div glot-model="Guides">Guides</div>
                                     <i class="fa-solid fa-angle-right"></i>
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card">
+                                <a class="tool-card" href="#">
                                     <h3 class="text-\[1\.17em\]" style="color: var(--accent-danger);" glot-model="Data+does+not+exist.">
                                         Data does not exist.
                                     </h3>
@@ -220,13 +222,13 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]">
+                            <a class="tool-card text-\[1\.17em\]" href="#">
                                 <h3 glot-model="Tools">
                                     Tools
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card">
+                                <a class="tool-card" href="#">
                                     <h3 class="text-\[1\.17em\]" style="color: var(--accent-danger);" glot-model="Data+does+not+exist.">
                                         Data does not exist.
                                     </h3>
