--- a/index.html
+++ b/index.html
@@ -235,6 +235,34 @@
                         </div>
                     </div>
                 </div>
+                <div class="discussionAreaBox">
+                    <script src="https://giscus.app/client.js"
+                        data-repo="fun117/speingcode"
+                        data-repo-id="R_kgDOKjf-sw"
+                        data-mapping="number"
+                        data-term="1"
+                        data-reactions-enabled="1"
+                        data-emit-metadata="0"
+                        data-input-position="top"
+                        data-theme="https://fun117.github.io/speingcode/site-assets/css/giscus.css"
+                        data-lang="en"
+                        crossorigin="anonymous"
+                        async>
+                    </script>
+                </div>
+                <footer>
+                    <p>
+                        <span>
+                            Developed by
+                            <a href="https://github.com/Fun117" target="_blank" class="link-decoration">Fun117</a>
+                        </span>
+                    </p>
+                    <p></p>
+                    <p>
+                        <i class="fa-brands fa-github" style="font-size: 20px;"></i>
+                        <span>Source code on <a href="https://github.com/Fun117/speingcode" target="_blank" rel="noreferrer" class="link-decoration">GitHub</a></span>
+                    </p>
+                </footer>
             </div>
         </main>
     </body>
