--- a/404.html
+++ b/404.html
@@ -12,9 +12,10 @@
         <link rel="manifest" href="./site-assets/manifest/webmanifest.json" />
         <!-- CSS -->
         <link rel="stylesheet" href="./site-assets/css/header.css" />
-        <link rel="stylesheet" href="./site-assets/css/styles.css" />
-        <link rel="stylesheet" href="./site-assets/css/tag.css" />
-        <link rel="stylesheet" href="./site-assets/css/links.css" />
+
+        <link rel="stylesheet" href="./site-assets/css/A-animation.css" />
+        <link rel="stylesheet" href="./site-assets/css/A-main.css" />
+        <link rel="stylesheet" href="./site-assets/css/A-parts.css" />
         <!-- JS -->
         <script src="./site-assets/js/languageChange.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
