--- a/changelog/index.html
+++ b/changelog/index.html
@@ -4,19 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- icon -->
-        <link rel="icon" type="image/x-icon" href="./site-assets/assets/logo/CitoHubIcon.png">
+        <link rel="icon" type="image/x-icon" href="../site-assets/assets/logo/CitoHubIcon.png">
         <title id="site-title">SpeingCodeEditor</title>
         <meta name="description" content="A web app that makes it easy to write code.">
         <!-- .webmanifest--> 
         <meta name="theme-color" content="#1a1a1a"/>
-        <link rel="manifest" href="./site-assets/manifest/webmanifest.json" />
+        <link rel="manifest" href="../site-assets/manifest/webmanifest.json" />
         <!-- CSS -->
         <link rel="stylesheet" href="../site-assets/css/header.css" />
-        <link rel="stylesheet" href="../site-assets/css/styles.css" />
-        <link rel="stylesheet" href="../site-assets/css/tag.css" />
-        <link rel="stylesheet" href="../site-assets/css/links.css" />
-        <link rel="stylesheet" href="../site-assets/css/changelog.css" />
-        <link rel="stylesheet" href="../site-assets/css/versions.css" />
+
+        <link rel="stylesheet" href="../site-assets/css/A-animation.css" />
+        <link rel="stylesheet" href="../site-assets/css/A-main.css" />
+        <link rel="stylesheet" href="../site-assets/css/A-parts.css" />
         <!-- JS -->
         <script src="../site-assets/js/languageChange.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
