--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="./site-assets/css/A-main.css" />
         <link rel="stylesheet" href="./site-assets/css/A-parts.css" />
         
-        <link rel="stylesheet" href="../../../site-assets/css/all.css" />
+        <link rel="stylesheet" href="./site-assets/css/all.css" />
         <!-- JS -->
         <script src="./site-assets/js/languageChange.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -98,15 +98,15 @@
                 <div class="card-group animeSreddtUpfadeIn">
                     <div class="card-column">
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="#">
+                            <a class="tool-card text-\[1\.17em\]" href="./tools/">
                                 <h3 glot-model="Popular+Tools">
                                     Popular Tools
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card" href="#">
-                                    <h3 class="text-\[1\.17em\]" style="color: var(--accent-danger);" glot-model="Data+does+not+exist.">
-                                        Data does not exist.
+                                <a class="tool-card" href="./tools/editor/webmanifest/">
+                                    <h3 class="text-\[1\.17em\]" glot-model="webmanifest">
+                                        webmanifest
                                     </h3>
                                 </a>
                             </div>
@@ -218,28 +218,56 @@
                             </a>
                             <div class="tool-body">
                                 <a class="tool-card" href="#">
-                                    <h3 class="text-\[1\.17em\]" style="color: var(--accent-danger);" glot-model="Data+does+not+exist.">
+                                    <h3 class="text-\[1\.17em\]" style="color: var(--invalid-text);" glot-model="Data+does+not+exist.">
                                         Data does not exist.
                                     </h3>
                                 </a>
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="#">
+                            <a class="tool-card text-\[1\.17em\]" href="./tools/">
                                 <h3 glot-model="Tools">
                                     Tools
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card" href="#">
-                                    <h3 class="text-\[1\.17em\]" style="color: var(--accent-danger);" glot-model="Data+does+not+exist.">
-                                        Data does not exist.
+                                <a class="tool-card" href="./tools/editor/webmanifest/">
+                                    <h3 class="text-\[1\.17em\]" glot-model="webmanifest">
+                                        webmanifest
                                     </h3>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="discussionAreaBox">
+                    <script src="https://giscus.app/client.js"
+                        data-repo="fun117/speingcode"
+                        data-repo-id="R_kgDOKjf-sw"
+                        data-mapping="number"
+                        data-term="1"
+                        data-reactions-enabled="1"
+                        data-emit-metadata="0"
+                        data-input-position="top"
+                        data-theme="https://fun117.github.io/speingcode/site-assets/css/giscus.css"
+                        data-lang="en"
+                        crossorigin="anonymous"
+                        async>
+                    </script>
+                </div>
+                <footer>
+                    <p>
+                        <span>
+                            Developed by
+                            <a href="https://github.com/Fun117" target="_blank" class="link-decoration">Fun117</a>
+                        </span>
+                    </p>
+                    <p></p>
+                    <p>
+                        <i class="fa-brands fa-github" style="font-size: 20px;"></i>
+                        <span>Source code on <a href="https://github.com/Fun117/speingcode" target="_blank" rel="noreferrer" class="link-decoration">GitHub</a></span>
+                    </p>
+                </footer>
             </div>
         </main>
     </body>
