--- a/tools/editor/webmanifest/index.html
+++ b/tools/editor/webmanifest/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
-    <script>
+    <script id="sitePasswordForm">
         let port = '48c09240-ad5a-4aef-9111-d809a79efcea';
         function sitePass(){
             var pass = prompt('Password');
@@ -8,7 +8,7 @@
                 window.location.href = '../../../'
             }else{
                 if(pass === port){
-                    port = 0;
+                    document.getElementById('sitePasswordForm').innerHTML = ''
                 }else{
                     alert('Please enter your password');
                     sitePass();
