--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="./site-assets/css/A-main.css" />
         <link rel="stylesheet" href="./site-assets/css/A-parts.css" />
         
-        <link rel="stylesheet" href="../../../site-assets/css/all.css" />
+        <link rel="stylesheet" href="./site-assets/css/all.css" />
         <!-- JS -->
         <script src="./site-assets/js/languageChange.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
