--- a/tools/editor/webmanifest/index.html
+++ b/tools/editor/webmanifest/index.html
@@ -16,7 +16,7 @@
             }
         };
         if(location.hostname != '127.0.0.1'){
-            window.onload=sitePass();
+            //window.onload=sitePass();
         };
     </script>
     <head>
